<resources>
    <string name="app_name">Habit</string>
    <string name="fwandroid_dialog_button_yes">Sim</string>
    <string name="fwandroid_dialog_button_no">Não</string>
    <string name="fwandroid_dialog_button_ok">OK</string>
    <string name="fwandroid_dialog_button_done">Concluído</string>
    <string name="fwandroid_dialog_button_continue">Continuar</string>
    <string name="fwandroid_dialog_button_cancel">Cancelar</string>
    <string name="fwandroid_dialog_button_delete">Excluir</string>
    <string name="fwandroid_format_integer">%d</string>
    <string name="fwandroid_default_string">Teste</string>
    <string name="fwandroid_default_integer">12345</string>
    <string name="fwandroid_month_year_picker_title">Selecione uma data</string>
    <string-array name="fwandroid_month_array">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
    <string name="dialog_button_yes">Sim</string>
    <string name="dialog_button_no">Não</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_continue">Continuar</string>
    <string name="dialog_button_cancel">Cancelar</string>
    <string name="dialog_button_delete">Excluir</string>
    <string name="dialog_button_post">Enviar</string>
    <string name="title_apontamento_pessoal">Apontamento Pessoal</string>
    <string name="title_apontamento_equipamento">Apontamento Equipamento</string>
    <string name="title_apontamento_carreteiro_origem">Transporte (Origem)</string>
    <string name="title_apontamento_carreteiro_destino">Transporte (Destino)</string>
    <string name="title_apontamento_transportador">Transporte</string>
    <string name="title_data_export">Exportar Dados</string>
    <string name="title_data_import">Importar Dados</string>
    <string name="title_configuracao">Configuração</string>
    <string name="about_title">Sobre o %s</string>
    <string name="about_version">Versão %s</string>
    <string name="about_developer">Previx Sistemas</string>
    <string name="about_conheca_nossas_solucoes">Conheça nossas soluções</string>
    <string name="about_previx">Previx</string>
    <string name="about_previx_description">Sistema de planejamento e gestão</string>
    <string name="about_frotix">Frotix</string>
    <string name="about_frotix_description">Sistema de gestão de equipamentos e manutenção</string>
    <string name="about_servix">Servix</string>
    <string name="about_servix_description">Sistema de gestão de serviços prestados e apropriação de custos</string>
    <string name="about_previx_report">Previx Report</string>
    <string name="about_previx_report_description">Gere relatórios do Previx de qualquer lugar</string>
    <string name="about_integracao">Integração</string>
    <string name="about_integracao_description">Faça integrações com outros sistemas</string>
    <string name="about_site_empresa">www.sistemaprevix.com.br</string>
    <string name="default_integer">123456</string>
    <string name="default_string">Este é um texto lorem ipsun apenas para testes de visualização um texto longo é necessário para testar a visualização do ellipsation</string>
    <string name="default_string_small">Este é um header</string>
    <string name="default_double">1234.45</string>
    <string name="default_mes_ano">Janeiro / 2017</string>
    <string name="default_date">01/01/2017</string>
    <string name="default_time">11:55</string>
    <string name="default_item_medicao_codigo">01.01</string>
    <string name="default_unidade">M3KM</string>
    <string name="default_prefixo">CQME153</string>
    <string name="default_material">Base</string>
    <string name="default_version">Versão 1.2.4</string>
    <string name="salvar">Salvar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="continuar">Continuar</string>
    <string name="repetir">Repetir</string>
    <string name="label_horas_paradas">Horas paradas</string>
    <string name="label_codigo">Código</string>
    <string name="label_talhao">Talhão</string>
    <string name="local">Local</string>
    <string name="pessoal">Pessoal</string>
    <string name="colaborador">Colaborador</string>
    <string name="colaboradores">Colaboradores</string>
    <string name="equipamento">Equipamento</string>
    <string name="equipamentos">Equipamentos</string>
    <string name="transportador">Transportador</string>
    <string name="transportadores">Transportadores</string>
    <string name="materiais">Materiais</string>
    <string name="apropriacoes">Apropriações</string>
    <string name="sobre">Sobre</string>
    <string name="text_scanner">Escanear codigo</string>
    <string name="revisar_producao">Revisar produção</string>
    <string name="apenas_no_periodo">Apenas no período</string>
    <string name="enviar">Enviar</string>
    <string name="periodo">Período</string>
    <string name="de">De</string>
    <string name="ate">Até</string>
    <string name="informacoes">Informações</string>
    <string name="adicionar">Adicionar</string>
    <string name="registro">Registro</string>
    <string name="nome">Nome</string>
    <string name="funcao">Função</string>
    <string name="prefixo">Prefixo</string>
    <string name="modelo">Modelo</string>
    <string name="descricao">Descrição</string>
    <string name="proprietario">Proprietário</string>
    <string name="propriedade">Propriedade</string>
    <string name="proprio">Próprio</string>
    <string name="locado">Locado</string>
    <string name="por_producao">Por produção</string>
    <string name="capacidade">Capacidade</string>
    <string name="distancia_fixa">Distância fixa</string>
    <string name="estaca_entrada">Estaca de entrada</string>
    <string name="enviando">Enviando…</string>
    <string name="exportado">Exportado</string>
    <string name="nao_exportado">Não exportado</string>
    <string name="sentido">Sentido</string>
    <string name="origem">Origem</string>
    <string name="destino">Destino</string>
    <string name="volume">Volume</string>
    <string name="data_do_apontamento">Data do apontamento</string>
    <string name="excluir_por_data">Excluir por data</string>
    <string name="data">Data</string>
    <string name="equipe">Equipe</string>
    <string name="equipes">Equipes</string>
    <string name="turno">Turno</string>
    <string name="turno_num_horas">Turno (No. de horas)</string>
    <string name="horimetro_inicial">Horímetro inicial</string>
    <string name="horimetro_final">Horímetro final</string>
    <string name="horas_trabalhadas">Horas trabalhadas</string>
    <string name="observacao">Observação</string>
    <string name="observacao_opcional">Observação (Opcional)</string>
    <string name="chuva">Chuva</string>
    <string name="falta_frente">Falta de frente</string>
    <string name="falta_operador">Falta de operador</string>
    <string name="quebra">Quebra</string>
    <string name="manutencao">Manutenção</string>
    <string name="equipe_incompleta">Equipe incompleta</string>
    <string name="outros">Outros</string>
    <string name="outros_motivos">Outros motivos</string>
    <string name="servico">Serviço</string>
    <string name="servicos">Serviços</string>
    <string name="servicos_padrao">Serviços padrão</string>
    <string name="servicos_executados">Serviços executados</string>
    <string name="hora">Hora</string>
    <string name="horas_perdida">Div. % de horas paradas</string>
    <string name="data_a">Data apresentada: </string>
    <string name="item_producao_valor_unidade">Produção: %1$.2f</string>
    <string name="item_producao_unidade"> %s</string>
    <string name="equipamentos_cadastrados">Equipamentos cadastrados</string>
    <string name="pessoal_cadastrado">Pessoal cadastrado</string>
    <string name="mobilizacoes">Mobilizações</string>
    <string name="volumes_materiais_por_estaca">Volumes por estaca</string>
    <string name="volume_material_basculante">Volume a transportar</string>
    <string name="volume_transportado_basculante">Volume transportado</string>
    <string name="material">Material</string>
    <string name="apropriacao">Apropriação</string>
    <string name="apropriacoes_servicos_padrao">Apropriações de serviços</string>
    <string name="apropriacoes_producao">Apropriações de produção</string>
    <string name="servicos_a_apropriar">Serviços à apropriar</string>
    <string name="servicos_padrao_cadastrados">Serviços padrão cadastrados</string>
    <string name="servicos_producao_cadastrados">Serviços de produção cadastrados</string>
    <string name="materiais_transportados">Materiais transportados</string>
    <string name="medicao">Medição</string>
    <string name="contrato_subempreiteiro">Contrato de subempreiteiro</string>
    <string name="concluir">Concluir</string>
    <string name="estaca_descarga">Estaca de descarga</string>
    <string name="lado">Lado</string>
    <string name="esquerdo">Esquerdo</string>
    <string name="esquerda">Esquerda</string>
    <string name="direito">Direito</string>
    <string name="direita">Direita</string>
    <string name="eixo">Eixo</string>
    <string name="atualizar">Atualizar</string>
    <string name="data_de_importacao">Data de Importação</string>
    <string name="data_de_exportacao">Data de Exportação</string>
    <string name="descarga">Descarga</string>
    <string name="carga">Carga</string>
    <string name="search_loading_message">Procurando registros</string>
    <string name="cidade">Cidade</string>
    <string name="cidades">Cidades</string>
    <string name="obra">Obra</string>
    <string name="obras">Obras</string>
    <string name="fazenda">Fazenda</string>
    <string name="fazendas">Fazendas</string>
    <string name="select_transportador">Selecione um transportador</string>
    <string name="select_material">Selecione um material</string>
    <string name="select_equipamento">Selecione um equipamento</string>
    <string name="select_colaborador">Selecione um colaborador</string>
    <string name="equip_com_producao_vinculada">Equip. com prod. vinculada</string>
    <string name="equip_com_producao_vinculada_opcional">Equip. com prod. vinculada (Opcional)</string>
    <string name="missing_volume_estaca_info">Faltam %1$.2f m³ para completar o volume da estaca.</string>
    <string name="remaining_volume_estaca_info">Volume da estaca completo. Sobram %1$.2f m³ para a próxima estaca.</string>
    <string name="volume_estaca_info">Volume de estaca descarga restante</string>
    <string name="apontar">Apontar</string>
    <string name="apontar_origem">Apontar origem</string>
    <string name="apontar_destino">Apontar destino</string>
    <string name="apont_trans_add_apontamento_exist">
        O transportador de prefixo %1$s já possui um apontamento em %2$td/%2$tm/%2$tY %3$tH:%3$tM
    </string>
    <string name="add_apont_trans_transportador_note">%1$s, Capacidade: %2$.2f</string>
    <string name="apont_trans_detail_note_transportador">%1$s, Capacidade: %2$.2f</string>
    <string name="equipamento_note">%1$s, %2$s</string>
    <string name="pessoa_note">%1$s, %2$s</string>
    <string name="item_equipamento_prefixo">Prefixo: %s</string>
    <string name="item_pessoa_registro">Registro: %s</string>
    <string name="item_servico_codigo">Criado em: %s</string>
    <string name="item_servico_executado_codigo">Código: %s</string>
    <string name="procurar_transportador">Procurar transportador…</string>
    <string name="item_categoria">Variavel adicional</string>
    <string name="time_s">TIME</string>
    <string name="string_s">STRING</string>
    <string name="valor_s">VALOR</string>
</resources>