<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vm"
            type="com.example.myapplication.ui.dialog.DialogViewModel"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">


            <TextView
                android:id="@+id/tv_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:labelFor="@+id/et_dialog"
                android:text="@string/nome"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={vm.requisitante}"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:padding="@dimen/fwandroid_text_medium"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/chip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_s"
                android:onClick="@{e->vm.setTipo(0)}"/>

            <RadioButton
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_s"
                android:onClick="@{e->vm.setTipo(1)}"/>

            <RadioButton
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor_s"
                android:onClick="@{e->vm.setTipo(2)}"/>

        </RadioGroup>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small"
            android:gravity="end">

            <Button
                android:id="@+id/btn_host_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_button_cancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:onClick="@{() -> vm.cancel()}"/>

            <Button
                android:id="@+id/btn_host_dialog_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:enabled="@{vm.pernitiOk}"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:onClick="@{() -> vm.save()}"/>
        </LinearLayout>
    </LinearLayout>
</layout>