<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vm"
            type="com.example.myapplication.ui.addEdithabit.AddEditHabitoCategoriaViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="outsideOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_extra_large"
            android:focusableInTouchMode="true"
            android:descendantFocusability="beforeDescendants">

            <LinearLayout
                android:id="@+id/add_equipamento_fields"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/add_equipamento_save"
                app:layout_constraintVertical_chainStyle="spread_inside">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/nome"
                    style="@style/Header.Small.Colored"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="@{vm.modeloError != null}"
                    app:error="@{vm.modeloError}"
                    android:labelFor="@+id/add_equipamento_modelos">

                    <AutoCompleteTextView
                        android:id="@+id/add_equipamento_modelos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={vm.modelo}"
                        android:textSize="@dimen/text_medium"
                        android:maxLines="1"
                        android:maxLength="30"
                        android:inputType="text"
                        android:imeOptions="actionNext" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/descricao"
                    style="@style/Header.Small.Colored"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="@{vm.descricaoError != null}"
                    app:error="@{vm.descricaoError}"
                    android:labelFor="@+id/add_equipamento_descricoes">

                    <AutoCompleteTextView
                        android:id="@+id/add_equipamento_descricoes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={vm.descricao}"
                        android:textSize="@dimen/text_medium"
                        android:maxLines="1"
                        android:maxLength="250"
                        android:inputType="text"
                        android:imeOptions="actionDone" />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/item_categoria"
                        style="@style/Header.Small.Colored"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/margin_small"
                        android:layout_marginStart="@dimen/fwandroid_text_medium"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/medicao"
                            android:layout_gravity="right"
                            android:src="@drawable/ic_add_box_black_24dp"
                            android:tint="@color/colorPrimary"
                            android:onClick="@{e->vm.variavelAdd()}"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/projeto_list_bottom_sheet"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/habit_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/add_equipamento_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@+id/add_equipamento_fields"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/salvar"
                android:enabled="@{vm.buttonEnabled}"
                android:onClick="@{() -> vm.save()}"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
